# autonomous-drone-landing

./: Dockerfile  README.md  launch_drone.sh
src/ardupilot_ros/ardupilot_cartographer/: README.md  package.xml  setup.cfg  setup.py
src/ardupilot_ros/ardupilot_ros/: CMakeLists.txt  package.xml
src/diagnostics/foxglove_node/: package.xml  setup.py
src/diagnostics/foxglove_node_msgs/: package.xml
src/foxglove_node/: package.xml  setup.cfg  setup.py
src/foxglove_node/foxglove_node/: bridge_node.py  jetson_monitor_node.py
src/foxglove_node_msgs/: CMakeLists.txt  package.xml
src/foxglove_node_msgs/msg/: BatteryInfo.msg  EscArrayInfo.msg  EscInfo.msg  StateInfo.msg
src/guide_arm_takeoff/: CMakeLists.txt  package.xml
src/guide_arm_takeoff/scripts/: guide_arm_takeoff.py  land_and_disarm.py
src/landing_pad_detector/: package.xml  setup.cfg  setup.py
src/landing_pad_detector/landing_pad_detector/: detector.py  hybrid_detector_landing_pad.py  locking_detector.py  modified_detector.py  modified_detector_v2.py  modified_detector_v3.py  modified_detector_v4.py
src/localization_server/: CMakeLists.txt  package.xml  setup.py
src/localization_server/config/: amcl_config.yaml  (+1 more)
src/map_server/: CMakeLists.txt  package.xml  setup.py
src/path_planner_server/: CMakeLists.txt  package.xml  setup.py
src/path_planner_server/config/: bt_navigator.yaml  controller.yaml
src/path_planner_server/launch/: pathplanner.launch.py
src/path_planner_server/path_planner_server/: __init__.py
src/path_planner_server/scripts/: cmdvel_to_stamped.py  nav_to_pose_action_client.py
(+18 files in other folders)
